--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -126,11 +126,10 @@
         </div>
         <div class="row">
           <div class="col-sm-6 text-right">
-            <h3> ICE OFFERS A GREEN ROOF THAT WILL IMPACT THE TORONTO SKYLINE WITH LUSH, OXYGEN CREATING LANDSCAPING,
-              WHILE CREATING A CANOPY OF ORGANIC SHELTER OVER THE BUSTLING PLAZA BELOW.</h3>
+            <h3 class="text-uppercase">Inspired by the classic beauty of modern Scandinavian design the team behind ICE Condos journeyed to the lands of the Midnight Sun to seek inspiration for their Toronto project.</h3>
           </div>
           <div class="col-sm-6 hidden-xs" style="padding-left: 0;">
-            <%= image_tag "building-3.jpg", class: "img-responsive" %>
+            <%= image_tag "home-amenities01.jpg", class: "img-responsive" %>
           </div>
         </div>
       </div>
