--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -32,22 +32,20 @@
         <%= image_tag "captions/tall.png", class: "ice-caption" %>
       </div>
       <div class="row">
-        <div class="col-md-7 col-md-offset-5 col-lg-5 col-md-offset-7">
+        <div class="col-md-7 col-md-offset-5">
           <h3>ICE IS A WAY OF LIFE, IT IS AT ONCE URBAN AND CLOSE TO NATURE, INSPIRED BY ARCHITECTURE THAT WHISPERS
             TIMELESS
             SIMPLICITY THROUGH CLEAN ELEGANT LINES.</h3>
 
           <div class="line"></div>
 
-          <p style="padding-left: 40px">Ice is a way of life, it is at once urban and close to nature, inspired by
-            architecture that whispers
-            timeless simplicity through clean elegant lines. ICE is tall, sleek and ultimately cool. ICE is
-            Scandinavian-inspired design emerging as a gleaming amalgam of glass and metal from the concrete labyrinth
-            of
-            Canada’s largest metropolis. ICE offers a green roof that will impact the Toronto skyline with lush, oxygen
-            creating landscaping, while creating a canopy of organic shelter over the bustling plaza below. ICE is a
-            condominium living that melds its contemporary design with trendsetting lifestyle amenities in Toronto’s
-            premiere waterfront location. ICE is prime real estate, sculpted for urban purchasers.</p>
+          <p style="padding-left: 40px">
+            So what is it about Scandinavian design that makes it so timeless and classic, as fresh and vibrant  now as it was in the mid-20th century.
+            <br><br>
+            For many, the appeal of the Nordic “look” is that it “humanized” modernism.  By the time Scandinavian design had reached its high point in the mid -1950s (when every suburban household in North America seemed  filled with  Danish Modern furniture) the International Style, as pioneered  by the German Bauhaus movement and master builders like Mies van der Rohe, was in complete ascendance.
+            <br><br>
+            Another of the enduring appeals of Scandinavian design is that it not only looks good, it is also wonderfully comfortable, useful and sensuous to the touch.
+          </p>
         </div>
       </div>
     </div>
@@ -62,11 +60,7 @@
 
       <div class="row">
         <div class="col-md-6">
-          <p>Ice is a way of life, it is at once urban and close to nature, inspired by architecture that whispers
-            timeless simplicity through clean elegant lines. ICE is tall, sleek and ultimately cool. ICE is
-            Scandinavian-inspired design emerging as a gleaming amalgam of glass and metal from the concrete labyrinth
-            of
-            Canada’s largest metropolis.</p></div>
+          <p>The term Scandinavian Design first appeared in 1951 as the title of an exhibition of a home decorations and furniture - "Scandinavian Design for Living" - at London’s Heal’s Department Store. The exhibition was the first of a series of showcases for Nordic design, decoration and furniture.</p></div>
 
         <div class="col-md-6">
           <h3>ICE IS A COLLABORATION OF SOME OF THE FINEST MINDS AND BRIGHTEST TALENTS OF THE DAY. IN SEARCH FOR THE
