--- a/app/views/home/location.html.erb
+++ b/app/views/home/location.html.erb
@@ -54,7 +54,7 @@
       </div>
       <div class="col-md-6 col-md-offset-1">
         <ul class="list-unstyled">
-          <li><span class="gold">ADDRESS:</span> YORK AND BREMNER, TORONTO</li>
+          <li><span class="gold">ADDRESS:</span> 14 YORK ST - YORK AND BREMNER, TORONTO</li>
           <li><span class="gold">DEVELOPER:</span> LANTERRA DEVELOPMENTS, CADILLAC FAIRVIEW</li>
           <li><span class="gold">ARCHITECT:</span> ARCHITECTSALLIANCE</li>
           <li><span class="gold">INTERIOR DESIGNER:</span> STUDIO MUNGE</li>
@@ -63,28 +63,27 @@
           <li><span class="gold">HEIGHT:</span> 768 FT</li>
           <li><span class="gold">STOREYS:</span> 67</li>
           <li><span class="gold">NUMBER OF UNITS:</span> 743</li>
-          <li><span class="gold">HEIGHT:</span> 610FT</li>
-          <li><span class="gold">SMALLEST SUITE:</span> 402 SQ FT</li>
-          <li><span class="gold">LARGEST SUITE:</span> 1300 SQ FT</li>
+          <li><span class="gold">SMALLEST SUITE:</span> 308 SQ FT</li>
+          <li><span class="gold">LARGEST SUITE:</span> 1042 SQ FT</li>
         </ul>
       </div>
     </div>
     <div class="about" style="padding: 40px 0;">
       <div class="col-md-6">
-        <h3>
-          ICE IS A WAY OF LIFE, IT IS AT ONCE URBAN AND CLOSE TO NATURE, INSPIRED BY ARCHITECTURE THAT WHISPERS
-          TIMELESS SIMPLICITY THROUGH CLEAN ELEGANT LINES.
-        </h3>
-
-        <div class="line"></div>
-
-        <p>Ice is a way of life, it is at once urban and close to nature, inspired by architecture that whispers
-          timeless simplicity through clean elegant lines. ICE is tall, sleek and ultimately cool. ICE is
-          Scandinavian-inspired design emerging as a gleaming amalgam of glass and metal from the concrete labyrinth
-          of Canada’s largest metropolis. ICE offers a green roof that will impact the Toronto skyline with lush,
-          oxygen creating landscaping, while creating a canopy of organic shelter over the bustling plaza below. ICE
-          is a condominium living that melds its contemporary design with trendsetting lifestyle amenities in
-          Toronto’s premiere waterfront location. ICE is prime real estate, sculpted for urban purchasers.</p>
+        <br>
+        <ul class="list-unstyled">
+          <li><span class="gold">ADDRESS:</span> 12 YORK ST - YORK AND BREMNER, TORONTO</li>
+          <li><span class="gold">DEVELOPER:</span> LANTERRA DEVELOPMENTS, CADILLAC FAIRVIEW</li>
+          <li><span class="gold">ARCHITECT:</span> ARCHITECTSALLIANCE</li>
+          <li><span class="gold">INTERIOR DESIGNER:</span> STUDIO MUNGE</li>
+          <li><span class="gold">LANDSCAPE ARCHITECT:</span> NAK DESIGN STRATEGIES</li>
+          <li><span class="gold">CATEGORY:</span> CONDO</li>
+          <li><span class="gold">HEIGHT:</span> 663 FT</li>
+          <li><span class="gold">STOREYS:</span> 57</li>
+          <li><span class="gold">NUMBER OF UNITS:</span> 663</li>
+          <li><span class="gold">SMALLEST SUITE:</span> 402 SQ FT</li>
+          <li><span class="gold">LARGEST SUITE:</span> 1360 SQ FT</li>
+        </ul>
       </div>
       <div class="col-md-5 col-md-offset-1">
         <%= image_tag "about2.jpg", class: "img-responsive" %>
