--- a/app/views/home/reviews.html.erb
+++ b/app/views/home/reviews.html.erb
@@ -19,7 +19,7 @@
                 </div>
                 <div class="col-md-10">
                   <p>
-                    <span>&quot;</span><%= r[1] %>
+                    <span>&quot;</span><%= r[1] %><span class="small_quote">&quot;</span>
                   </p>
                   <strong><%= r[2] %></strong>
                 </div>
