--- a/app/views/home/sell_with_us.html.erb
+++ b/app/views/home/sell_with_us.html.erb
@@ -4,7 +4,7 @@
       <br>
       <p class="top letter-spaced text-uppercase">My listings get "sold"</p>
     </div>
-    <h1 class="page_title">SELLER'S SPACE</h1>
+    <h1 class="page_title">MY OBJECTIVE IS NOT TO GET IT LISTED…</h1>
     <br><br>
     <div class="heading">
       <p>TREB listings to sales ratio's</p>
@@ -48,23 +48,20 @@
       <div class="container">
         <div class="row objective-heading">
            <div class="col-md-12">
-            <h2>my objective is not get it listed <br><strong>It's to get it "sold"</strong></h2>
-            <%= image_tag "sellers2.png", class: "header" %>
-            <%= image_tag "sellers3.png", class: "header" %>
-
-            <p>8 strong points for sell with us</p>
+            <h2>MARKETING POWER HOUSE</h2>
+            <p>HOW WE MARKET OUR LISTINGS</p>
           </div>
         </div>
         <div class="row objective-row">
           <div class="col-md-3">
             <span>1</span>
             <h3>Professionally Designed Printed & Emailed Property Feature Sheets</h3>
-            <p>24 Hr Marketing Display</p>
+            <p>Every Feature Sheet Directs Potential Buyers to Your Virtual Tour</p>
           </div>
            <div class="col-md-3">
             <span>2</span>
             <h3>For Sale Sign<br>On The Yard</h3>
-            <p>Every Feature Sheet Directs Buyers to your Virtual Tour</p>
+            <p>24Hr Marketing Display</p>
           </div>
           <div class="col-md-3">
             <span>3</span>
@@ -81,12 +78,12 @@
           <div class="col-md-3">
             <span>5</span>
             <h3>Open Houses</h3>
-            <p>Local Newspapers Magazines And Flyer</p>
+            <p>Realtor and Public Open Houses</p>
           </div>
            <div class="col-md-3">
             <span>6</span>
             <h3>Print Advertising</h3>
-            <p>Realtor And Public Open House</p>
+            <p>Local Newspapers, Magazines, and Flyers.</p>
           </div>
           <div class="col-md-3">
             <span>7</span>
@@ -96,15 +93,11 @@
           <div class="col-md-3">
             <span>8</span>
             <h3>Just Listed<br>Cards</h3>
-            <p>Communication With Realtors And Potential Buyers For Their Feedback</p>
+            <p>Our Just Listed Marketing Cards Target Immediate Area of the Property</p>
           </div>
         </div>
         <div class="row objective-row-icons">
-          <div class="row">
-            <div class="col-md-12">
-              <p>Marketing power for your home selling</p>
-            </div>
-          </div>
+          <br>
           <div class="row">
             <div class="col-md-3">
               <%= image_tag "selling-icon1.png" %>
