--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -157,6 +157,12 @@
                 </table>
               </div>
             </div>
+            <br>
+            <div class="row">
+              <div class="col-md-8 col-md-offset-2">
+                <a class="btn btn-gold btn-block request-info-link" data-modal-title="BOOK A VIEWING" data-modal-btn="BOOK A VIEWING" data-modal-source="BOOK A VIEWING" data-modal-details="BOOK A VIEWING" data-toggle="modal" data-target="#request-info-modal">BOOK A VIEWING</a>
+              </div>
+            </div>
           </div>
           <div class="col-md-5">
             <% if @listing.s_r == 'Sale' %>
@@ -250,7 +256,7 @@
             <br>
             <div class="realtor-box">
               <div class="name">MARTIN ZIELINSKI</div>
-              <div class="realtor">CLOUD REALTY INC./MARTIN ZIELINSKI REALTORS<br>info@martinzielinski.com</div>
+              <div class="realtor">CLOUD REALTY INC.<br>info@martinzielinski.com</div>
               <div class="row">
                 <div class="col-md-8">
                   <div class="phone">
@@ -259,11 +265,6 @@
                 </div>
                 <div class="col-md-4">
                   <a href="#" id="show-phone">Click to View</a>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-3">
-                  <hr>
                 </div>
               </div>
               <%= image_tag("zielinski.png", width: "150", height: "20") %>
