--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -8236,6 +8236,10 @@ a.gold {
     span {
       font-size:28px;
       padding-right:10px;
+      &.small_quote {
+        font-size: 18px;
+        padding-left:5px;
+      }
     }
   }
 }
@@ -8305,18 +8309,14 @@ section.sellers .heading p {
 .objective {
   text-align: center;
   border-bottom: 2px solid #c4b257;
-  padding: 40px 0;
+  padding: 20px 0;
 }
 .objective h2 {
-  display: none;
-  font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
   letter-spacing: 5px;
   line-height: 40px;
   font-weight: 100px;
   margin: 0;
   text-transform: uppercase;
-}
-.objective h2 strong {
   color: #c4b257;
 }
 .objective h3 {
