--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -4,7 +4,7 @@
       <br>
       <p class="top letter-spaced">MARTIN ZIELINSKI</p>
     </div>
-    <h1 class="page_title">YOUR LOCAL REAL ESTATE ADVISOR</h1>
+    <h1 class="page_title" style="font-size:40px;">WHY WORK WITH A LUXURY HOME MARKETING MEMBER</h1>
 
     <div class="subnav">
     </div>
@@ -13,37 +13,43 @@
     <div class="col-md-12 about-row-1">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-5">
             <span class="gold">OUR GOAL IS TO PROVIDE YOU WITH PERSONAL AND COMPREHENSIVE SERVICES WHEN PURCHASING YOUR NEW HOME.</span>
+            <div class="row">
+              <div class="col-md-8">
+                <br>
+                <iframe class="tscplayer_inline embeddedObject" name="tsc_player" scrolling="no" frameborder="0" type="text/html" style="overflow:hidden;" src="//www.screencast.com/users/wacoilhm/folders/Why%20Work%20With%20Videos/media/5b58f1c5-b5ea-4cfa-8173-f489e816dde7/embed" height="270" width="330" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br><br>
+                <%= image_tag "about-labels.png", class: "img-responsive" %>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-7">
+            <div class="row">
+              <div class="col-md-7 text-right about-text">
+                “Congratulations on your decision to move to the Greater Toronto Area. It is a friendly community with an affordable standard of living and reasonably priced housing. You will also appreciate the diverse cosmopolitan opportunities you would typically find in a much larger metropolitan areas of the world”
+              </div>
+              <div class="col-md-5">
+                <%= image_tag "martin-color.png", class: "img-responsive" %>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                <br><br><br>
+                <span style="font-size:16px;">MARTIN IS COMMITTED TO:</span><br>
+                <br>
+                <ul class="about-list">
+                  <li>Providing dedicated, personal service to all his clients</li>
+                  <li>Being flexible and available at all times</li>
+                  <li>Providing professional and ethical service</li>
+                  <li>Listening to client needs and developing innovative strategies to address them</li>
+                  <li>Providing constant feedback to keep clients well informed</li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
         <br>
         <br>
-        <div class="row">
-          <div class="col-md-6">
-            <p class="about-content">
-              “Congratulations on your decision to move to the Greater Toronto Area. It is a friendly community with an affordable standard of living and reasonably priced housing. You will also appreciate the diverse cosmopolitan opportunities you would typically find in a much larger metropolitan areas of the world”
-            </p>
-          </div>
-          <div class="col-md-5 col-md-offset-1">
-            <span style="font-size:16px;">MARTIN IS COMMITTED TO:</span><br>
-            <hr style="border-color: #333;">
-            <br>
-            <ul class="about-list">
-              <li>Providing dedicated, personal service to all his clients</li>
-              <li>Being flexible and available at all times</li>
-              <li>Providing professional and ethical service</li>
-              <li>Listening to client needs and developing innovative strategies to address them</li>
-              <li>Providing constant feedback to keep clients well informed</li>
-            </ul>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <%= image_tag "about-img-1.png", class: "img-responsive" %>
-          </div>
-        </div>
-        <br><br><br>
       </div>
     </div>
   </div>
