--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -7881,6 +7881,11 @@ hr.gold {
     color: #999;
   }
 }
+.about-text {
+  color: #999;
+  line-height:30px;
+  margin-top:100px;
+}
 .about-content {
   color: #999;
   line-height:30px;
