--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -267,7 +267,7 @@
                   <a href="#" id="show-phone">Click to View</a>
                 </div>
               </div>
-              <%= image_tag("zielinski.png", width: "150", height: "20") %>
+              <%= image_tag("zielinski-logo.png", width: "175", height: "17") %>
             </div>
           </div>
         </div>
