--- a/config/recipes/templates/nginx_unicorn_production.erb
+++ b/config/recipes/templates/nginx_unicorn_production.erb
@@ -9,15 +9,15 @@ upstream unicorn_fat_free_crm_production  {
 
 server {
    listen       80;
-   server_name  www.icecondos.com;
-   rewrite ^ http://icecondos.com$request_uri? permanent;
+   server_name  www.myicecondos.com;
+   rewrite ^ http://myicecondos.com$request_uri? permanent;
 }
 
 server {
     listen       80;
 
     client_max_body_size 4G;
-    server_name crm.icecondos.com;
+    server_name crm.myicecondos.com;
 
     # ~2 seconds is often enough for most folks to parse HTML/CSS and
     # retrieve needed images/icons/frames, connections are cheap in
