--- a/config/recipes/templates/nginx_unicorn_staging.erb
+++ b/config/recipes/templates/nginx_unicorn_staging.erb
@@ -11,7 +11,7 @@ server {
     listen       80;
 
     client_max_body_size 4G;
-    server_name 45.58.37.92/crm;
+    server_name myicecondos.com/crm;
 
     # ~2 seconds is often enough for most folks to parse HTML/CSS and
     # retrieve needed images/icons/frames, connections are cheap in
@@ -97,7 +97,7 @@ server {
     listen       80;
 
     client_max_body_size 4G;
-    server_name 45.58.37.92;
+    server_name myicecondos.com;
 
     # ~2 seconds is often enough for most folks to parse HTML/CSS and
     # retrieve needed images/icons/frames, connections are cheap in
