--- a/config/recipes/templates/nginx_unicorn_staging.erb
+++ b/config/recipes/templates/nginx_unicorn_staging.erb
@@ -3,15 +3,21 @@ upstream <%= "unicorn_#{application}_#{stage}" %>  {
   server unix:/tmp/unicorn.<%= "#{application}_#{stage}" %>.sock fail_timeout=0;
 }
 
-upstream unicorn_fat_free_crm_stagins  {
-  server unix:/tmp/unicorn.fat_free_crm_staging.sock fail_timeout=0;
+upstream unicorn_fat_free_crm_production  {
+  server unix:/tmp/unicorn.fat_free_crm_production.sock fail_timeout=0;
+}
+
+server {
+   listen       80;
+   server_name  www.myicecondos.com;
+   rewrite ^ http://myicecondos.com$request_uri? permanent;
 }
 
 server {
     listen       80;
 
     client_max_body_size 4G;
-    server_name myicecondos.com/crm;
+    server_name crm.myicecondos.com;
 
     # ~2 seconds is often enough for most folks to parse HTML/CSS and
     # retrieve needed images/icons/frames, connections are cheap in
@@ -65,7 +71,7 @@ server {
         # clients, really.
         # proxy_buffering off;
 
-        proxy_pass http://unicorn_fat_free_crm_stagins;
+        proxy_pass http://unicorn_fat_free_crm_production;
     }
 
   	recursive_error_pages on;
@@ -97,7 +103,7 @@ server {
     listen       80;
 
     client_max_body_size 4G;
-    server_name myicecondos.com;
+    server_name icecondos.com;
 
     # ~2 seconds is often enough for most folks to parse HTML/CSS and
     # retrieve needed images/icons/frames, connections are cheap in
