--- a/config/recipes/templates/nginx_unicorn_production.erb
+++ b/config/recipes/templates/nginx_unicorn_production.erb
@@ -9,8 +9,7 @@ upstream unicorn_fat_free_crm_production  {
 
 server {
    listen       80;
-   server_name  www.myicecondos.com;
-   rewrite ^ http://myicecondos.com$request_uri? permanent;
+   server_name  myicecondos.com;
 }
 
 server {
